@startuml Diagrama de classes - Stellar Warfare
skinparam linetype ortho
left to right direction
class Bullet {
    + Bullet(int x, int y, int rotation, Type type, sf::Texture* texture, float scale, int scene_offset_x,int scene_offset_y)
    + ~Bullet()
    + update_behaviour() : void
}

class DynamicArray {
    - _array : T*
    - _empty_value : T
    - _size : unsigned int

    + DynamicArray()
    + DynamicArray(unsigned int initial_size, T empty_value)
    + ~DynamicArray()
    + fill(T value) : void
    + add(const T& value) : unsigned int
    + size() : unsigned int
}

class Enemy {
    - _algorithm : int
    - _last_player_position[2] : int
    - _last_move[2] : int
    - _successfully_moved : bool

    + Enemy(int x, int y, int rotation, float speed, sf::Texture* texture, float scale, int scene_offset_x,int scene_offset_y)
    + ~Enemy()
    + update_behaviour(Enemy* enemy) : void
    + tell_result(int player_x, int player_y, bool successfully_moved) : void
    
    - get_algorithm() : int 
    - get_last_player_position() : int* 
    - successfully_moved() : bool
    - get_last_move() : int*
    - set_last_move(int x, int y) : void
    - random_alg() : void
    - spinner_alg() : void
    - walker_alg() : void 
    - hunter_alg() : void
    - shooter_alg() : void
}

class Entity {
    {static} - _id_counter : static unsigned int 
    - _id : unsigned int 
    - _index : unsigned int 
    # _position[2] : int
    # _rotation : int
    - _target_move[2] : int
    # _size : int
    - _scene_offset[2] : int
    - _has_target_move : bool
    - _scale : float
    - _speed : float
    - _time_accumulator : float
    - _type : Type
    - _color : sf::Color
    - _sprite : sf::Sprite
    - _clock : sf::Clock* 

    + Entity()
    + Entity(int x, int y, int rotation, float speed, Type type, int size, float scale, int scene_offset_x,int scene_offset_y)
    + ~Entity()
    + get_id() : unsigned int
    + get_index() : unsigned int
    + get_position() : int* 
    + get_target_move() : int* 
    + get_size() : int
    + get_rotation() : int 
    + has_target_move() : bool 
    + set_index(unsigned int index) : void
    + get_type() : Type
    + can_move() : bool
    + set_position_and_rotation(int x, int y, int rotation) : void
    + render(sf::RenderWindow* window) : void
    + set_target_move(int x, int y) : void
    + reset_target_move() : void
    + set_speed(float speed) : void
    # set_graphics(sf::Texture* texture) : void
    - update_sprite() : void
}

enum Type {
    VOID
    PLAYER
    ENEMY
    PLAYER_BULLET
    ENEMY_BULLET
}

class Game {
    - _window : sf::RenderWindow*
    - _input : Input*
    - _scene : Scene*
    - _renderer : Renderer*
    - _user_interface : UserInterface*

    + Game()
    + ~Game()
    + init() : void
    + run() : void
    + free() : void
    + handle_event(StateMachine::Event event) : void
    + get_window() : sf::RenderWindow* 
    + get_scene() : Scene* 
    + get_user_interface() : UserInterface* 
}

class Image {
    - _sprite : sf::Sprite*

    + Image(Alignment alignment, int x, int y, int window_width, int window_height, sf::Texture* texture, sf::Color color,float scale)
    + ~Image()
    + update(sf::Texture* texture) : void
    + render(sf::RenderWindow* window) : void
}

class Input {
    - _internal_state : StateMachine::State
    - _input_sem : Sempahore*

    + Input()
    + ~Input()
    + handle_event(StateMachine::Event event) : void

    - lock_input() : void 
    - unlock_input() : void
    - get_internal_state() : StateMachine::State
    - update_detection(Input* input) : void
}

class Player {
    - _current_event : StateMachine::Event
    - _event_sem : Semaphore* 

    + Player() 
    + Player(int x, int y, sf::Texture* texture, float scale, int scene_offset_x, int scene_offset_y)
    + ~Player()
    + update_behaviour(Player* player) : void
    + set_control_event(StateMachine::Event event) : void
}

class Renderer {
    - _background_color : sf::Color
    - _internal_state : StateMachine::State 
    - _renderer_sem : Semaphore* 

    + Renderer()
    + ~Renderer()
    + get_background_color() : sf::Color 
    + handle_event(StateMachine::Event event) : void

    - lock_renderer() : void
    - unlock_renderer() : void
    - get_internal_state() : StateMachine::State 
    - render(Renderer* renderer) : void
}

class Scene {
    - _width : int
    - _height : int
    - _score : int
    - _enemy_spawn_count : int
    - _enemy_kill_count : int
    - _level : int
    - _scene_offset[2] : int
    - _scale : float
    - _skip_time : bool
    - _player_texture : sf::Texture*
    - _enemy_texture : sf::Texture*
    - _cell_texture : sf::Texture*
    - _background_cell : sf::Sprite*
    - _clock : sf::Clock*
    - _player : Player*
    - _enemies : DynamicArray<Enemy*>*
    - _bullets : DynamicArray<Bullet*>*
    - _enemy_spawn_times : DynamicArray<float>*
    - _scene_sem : Semaphore*
    - _internal_state : StateMachine::State

    + Scene()
    + ~Scene()
    + render(sf::RenderWindow* window) : void
    + handle_event(StateMachine::Event event) : void

    - update_scene(Scene* scene) : void
    - lock_scene() : void
    - unlock_scene() : void
    - get_player() : Player* 
    - get_internal_state() : StateMachine::State
    - level_speed() : float
    - check_precise_collision(Entity* entity1, Entity* entity2, int new_x, int new_y) : bool
    - check_corner_collision(int x1, int y1, int x2, int y2, int size1, int size2) : bool
    - solve_boundary_collision(Entity* entity, int new_x, int new_y) : bool
    - solve_entity_collision(Entity* entity1, Entity* entity2) : bool
    - create_player() : void
    - create_enemy(int spot = -1) : void
    - create_bullet(int x, int y, int rotation, Entity::Type type) : void
    - destroy_player() :void
    - destroy_bullet(unsigned int i) : void
    - destroy_enemy(unsigned int i) : void
    - update_all_entities() : void
    - solve_collisions(Entity* entity) : bool
    - update_bullets_behavior() : void
    - spawn_enemies() : void
    - start_game() : void
    - end_game() : void
    - update_enemies_speed() : void
    - render_background(sf::RenderWindow* window, int noise_range) : void
}

Class Spaceship {
    - _health : int
    - _firerate : float
    - _shot_time_accumulator : float
    - _shooting : bool
    - _sem : Semaphore*
    - _firerate_clock : sf::Clock*

    + Spaceship()
    + Spaceship(int x, int y, float rotation, float speed, Type type, int health, float firerate, float scale,int scene_offset_x, int scene_offset_y)
    + ~Spaceship()
    + get_health() : int
    + is_shooting() : bool
    + lock() : void
    + unlock() : void
    + reset_shooting() : void
    + apply_damage(int damage) : void
    + get_shot_spawn_x() : int
    + get_shot_spawn_y() : int
    + can_shoot() : bool
    + kill() : void
    + shoot() : void
}

Class StateMachine {
    + StateMachine()
    + ~StateMachine()
}

enum "State" as StateMachine::State {
    NONINITIALIZED
    INGAME
    PAUSED
    GAMEOVER
    EXIT
}

enum Event {
    IDLE
    UP
    DOWN
    LEFT
    RIGHT
    SPACE
    P_KEY
    Q_KEY
    R_KEY
    PLAYER_DEATH
}

Class Text {
    - _text : sf::Text* 
    - _shadow : sf::Text* 

    + Text(Alignment alignment, int x, int y, int window_width, int window_height, sf::Font* font, sf::Color color,sf::Color shadow_color, int size, sf::String text)
    + ~Text()
    + update(sf::String text) : void
    + render(sf::RenderWindow* window) : void
}

class ThreadContainer {
    # thread : Thread*

    + ThreadContainer()
    + ~ThreadContainer()
    + get_thread() : Thread*
    + join() : void
    + suspend() : void
    + resume() : void
}

class UserInterface {
    - _window_size[2] : int
    - _border_texture : sf::Texture*
    - _full_heart_texture : sf::Texture* 
    - _empty_heart_texture : sf::Texture* 
    - _font : sf::Font*
    - _border : Image* 
    - _heart1 : Image*
    - _heart2 : Image*
    - _heart3 : Image* 
    - _title : Text*
    - _state_info : Text*
    - _score_label : Text*
    - _score : Text*
    - _health_label : Text*
    - _level_label : Text*
    - _level : Text*
    - _info : Text*
    - _authors : Text*
    - _user_interface_sem : Semaphore*
    - _internal_state : StateMachine::State

    + UserInterface()
    + ~UserInterface()
    + render(sf::RenderWindow* window) : void
    + handle_event(StateMachine::Event event) : void
    + update_score(int score) : void
    + update_health(int health) : void
    + update_level(int speed) : void
}

class Widget {
    # position[2] : int

    + Widget(Alignment alignment, int x, int y, int window_width, int window_height)
    + ~Widget()
    + render(sf::RenderWindow* window) : void
}

enum Alignment {
    TOP_LEFT
    TOP
    TOP_RIGHT
    LEFT
    CENTER
    RIGHT
    BOTTOM_LEFT
    BOTTOM
    BOTTOM_RIGHT
}

class CPU #FFAAAA {
    {static} + switch_context(Context *from, Context *to) : void
    {static} + finc(int number) : int
    {static} + fdec(int number) : int
}

class Context #FFAAAA {
    {static} - STACK_SIZE : unsigned int
    + Context()
    + Context(void (*func)(Tn...), Tn... an)
    + ~Context()
    + save() : void
    + load() : void
}

class Ordered_Queue <<Typedef>> #FFAAAA {}

class Semaphore #FFAAAA {
    + Semaphore(int v = 1)
    + ~Semaphore()
    + p() : void
    + v() : void
    - finc(int number) : int
    - fdec(int number) : int
    - sleep() : void
    - wakeup() : void
    - wakeup_all() : void
    - value: int
    - sleeping_queue: Ordered_Queue
}

class System #FFAAAA {
    {static} + init(void (*main)(void *)) : void
}

class Thread #FFAAAA {
    + Thread()
    + Thread(void (*entry)(Tn...), Tn... an)
    + ~Thread()
    {static} + running() : Thread*
    {static} + switch_context(Thread *prev, Thread *next) : int
    + thread_exit(int exit_code) : void
    + id() : int
    {static} + dispatcher() : void
    {static} + init(void (*main)(void *)) : void
    {static} + yield() : void
    + context() : Context*
    + join() : int
    + suspend() : void
    + resume() : void
    {static} + sleep(Ordered_Queue *sleeping_queue) : void
    {static} + wakeup(Ordered_Queue *sleeping_queue) : void
    + get_link() : Ordered_Queue::Element
    - _id: int
    - _context: Context*
    {static} - _running: Thread*
    {static} - _main: Thread
    {static} - _main_context: Context*
    {static} - _dispatcher: Thread
    {static} - _ready: Ordered_Queue
    {static} - _link: Ordered_Queue::Element
    {static} - _state: State
    {static} - _id_counter: int
    - _exit_code: int
    {static} _suspended: Ordered_Queue
    - _waiting_join: Thread*
}

enum "State" as Thread::State #FFAAAA {
    RUNNING
    READY
    FINISHING
    SUSPENDED
    WAITING
}

struct Traits #FFAAAA {
    + debugged : const bool
    + STACK_SIZE : const unsigned int
    + error : const bool
    + warning : const bool
    + info : const bool
    + trace : const bool
}

class Color #AAFFAA {}

class Sprite #AAFFAA {}

class Clock #AAFFAA {}

class RenderWindow #AAFFAA {}

class Texture #AAFFAA {}

class "Text" as sf::Text #AAFFAA {}

class Font #AAFFAA {}

class String #AAFFAA {}

' Inheritance relations
Bullet --|> Entity
Enemy --|> Spaceship
Image --|> Widget
Input --|> ThreadContainer
Player --|> Spaceship
Renderer --|> ThreadContainer
Scene --|> ThreadContainer
Spaceship --|> Entity
Spaceship --|> ThreadContainer
Text --|> Widget

Bullet -- Texture

Enemy -- Texture

DynamicArray "1" o-- "0..4" Enemy
DynamicArray "1" o-- "0..*" Bullet

Entity "1" *-- "1" Color
Entity "1" *-- "1" Sprite
Entity "1" *-- "1" Clock
Entity -- Type
Entity -- RenderWindow

Game "1" *-- "1" RenderWindow
Game "1" *-- "1" Input
Game "1" *-- "1" Scene
Game "1" *-- "1" Renderer
Game "1" *-- "1" UserInterface
Game -- Event

Image "1" *-- "1" Sprite
Image -- Texture
Image -- RenderWindow

Input -- StateMachine::State
Input "1" *-- "1" Semaphore
Input -- Event

Player -- Event
Player "1" *-- "1" Semaphore
Player -- Texture

Renderer "1" *-- "1" Color
Renderer -- StateMachine::State
Renderer "1" *-- "1" Semaphore
Renderer -- Event

Scene "1" *-- "1" Semaphore
Scene "3" *-- "1" Texture
Scene "1" *-- "1" Sprite
Scene "1" *-- "1" Clock
Scene "1" *-- "0..1" Player
Scene "1" *-- "0..4" Enemy
Scene "1" *-- "0..*" Bullet
Scene "1" *-- "3" DynamicArray
Scene "1" *-- "1" Semaphore
Scene -- StateMachine::State
Scene -- Entity
Scene -- Event
Scene -- Type
Scene -- RenderWindow

Spaceship "1" *-- "1" Semaphore
Spaceship "1" *-- "1" Clock

StateMachine -- StateMachine::State

Text "1" *-- "2" sf::Text
Text -- Font
Text -- String
Text -- RenderWindow
Text -- Color

ThreadContainer "1" *-- "1" Thread

UserInterface "1" *-- "3" Texture
UserInterface "1" *-- "1" Font
UserInterface "1" *-- "4" Image
UserInterface "1" *-- "9" Text
UserInterface "1" *-- "1" Semaphore
UserInterface -- StateMachine::State
UserInterface -- Event
UserInterface -- RenderWindow

Widget -- Alignment

CPU +-- Context

Semaphore "1" *-- "1" Ordered_Queue
Semaphore "0..1" o-- "0..*" Thread

System -- Thread

Thread "1" *-- "1" Context
Thread -- Thread::State

Context -- Traits

Ordered_Queue "0..*" o-- "1" Thread

skinparam legendBackgroundColor #ffffff
legend

|= field |= method |=  |
|  <img:http://s.plantuml.com/private-field.png>     |   <img:http://s.plantuml.com/private-method.png>     | private |
|  <img:http://s.plantuml.com/protected-field.png>   |   <img:http://s.plantuml.com/protected-method.png>   | protected |
|  <img:http://s.plantuml.com/package-private-field.png>     |   <img:http://s.plantuml.com/package-private-method.png>    | package private |
|  <img:http://s.plantuml.com/public-field.png>     |   <img:http://s.plantuml.com/public-method.png>     | public |

endlegend

@enduml